@@ -1,3 +1,5 @@
+2022/02/18
+• Slash command support for rolling dice.
 2022/01/31
 • Slash command support for echo.
 2022/01/19
